First generation attempts

--- a/spring-data-jpa/pom.xml
+++ b/spring-data-jpa/pom.xml
@@ -87,12 +87,16 @@
 			<optional>true</optional>
 		</dependency>
 
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-launcher</artifactId>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
-			<groupId>org.junit.platform</groupId>
-			<artifactId>junit-platform-launcher</artifactId>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
