--- a/spring-data-jpa/pom.xml
+++ b/spring-data-jpa/pom.xml
@@ -242,6 +242,12 @@
 			<optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>org.jboss.logging</groupId>
+			<artifactId>jboss-logging</artifactId>
+			<version>3.6.1.Final</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -369,6 +375,11 @@
 							<groupId>jakarta.persistence</groupId>
 							<artifactId>jakarta.persistence-api</artifactId>
 							<version>${jakarta-persistence-api}</version>
+						</path>
+						<path>
+							<groupId>org.jboss.logging</groupId>
+							<artifactId>jboss-logging</artifactId>
+							<version>3.6.1.Final</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
